--- a/src/styles.css
+++ b/src/styles.css
@@ -20,5 +20,12 @@ body {
     width: 100%;
     height: 100vh;
     background-color: var(--blue-1);
-    
+}
+
+.container {
+    width: 400px;
+    height: 80vh;
+    background-color: var(--blue-2);
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px var(--shadow-dark);
 }
